Added many front-end changes to all pages

--- a/app/views/admins/dashboard/show.html.erb
+++ b/app/views/admins/dashboard/show.html.erb
@@ -116,7 +116,7 @@
 					<th>Class</th>
 					<th>Day</th>
 					<th>Start Time</th>
-					<th>End TIme</th>
+					<th>End Time</th>
 				</tr>
 			</thead>
 			<%= form_for @new_labtime do |f|%>
@@ -134,7 +134,7 @@
 
 		<br><br>
 
-		<h4> Lab Times: </h4>
+		<h4> Lab Times </h4>
 		<% unless @lt.empty? %>
 			<table class="table table-bordered table-hover table-striped">
 				<thead>
