--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,12 +2,12 @@
 	<nav class="navbar-collapse bs-navbar-collapse" role="navigation">
 		<ul class="nav navbar-nav"> 
 			<li> 
-				<a href="/">CS61A/B/C Lab Assistant Home</a>		
+				<a href="/">CS Lab Assistant Check-Ins Home</a>		
 			</li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right"> 
 			<li>
-				<a href="admins/sign_in">Admin Login</a><br />
+				<a href="admins/sign_in">Admin Login</a>
 			</li>
 			<li>
 				<a href="teaching_assistants/sign_in">TA Login</a>
@@ -19,12 +19,9 @@
 	</nav>
 </div>
 
-<div class="home-banner" align="center">
-  <h2>CS61A Lab Assistant Homepage</h2>
-</div>
+<div class="home-banner" align="center">CS61A Lab Assistant Check-Ins</div>
 
 <br> <br>
-
 
 <div align="center">
 	<%= image_tag "home_icon.png", :class=>"img-responsive", :size=>"420" %>
@@ -42,7 +39,7 @@
 	<div class="col-xs-4" align="center">
 		<%= image_tag "lab.png", :class=>"img-responsive", :size=>"60"%>
 	</div>
-</div
+</div>
 
 <div class="row">
 	<div class="col-xs-4" align="center">
