--- a/app/views/check_in_forms/new.html.erb
+++ b/app/views/check_in_forms/new.html.erb
@@ -1,26 +1,32 @@
 <br>
-<h2 align="center"> <%= @course.name %>  Lab Assistant Check-In</h2>
+<h1 align="center"> <%= @course.name %>  Lab Assistant Check-In</h1>
  		 
-<div align="center">
+<div class="container" align="left">
   <%= form_for CheckInForm.new, url: {action: "create"} do |f| %>
-    Name: <%= f.text_field :name %>
-    <br><br>
-    SID: <%= f.text_field :SID %>
-    <br><br>
-    What are you checking in for:
-    <br>
-    <%= f.radio_button(:event, "lab") %>
-    <%= f.label(:event_lab, "Lab") %>
-    <br>
-    <%= f.radio_button(:event, "office_hours") %>
-    <%= f.label(:event_office_hours, "Office Hours") %>
-    <br>
-    <%= f.radio_button(:event, "guerilla_section") %>
-    <%= f.label(:event_guerilla_section, "Guerilla Section") %>
-    <br>
-    <%= f.radio_button(:event, "homework_party") %>
-    <%= f.label(:event_homework_party, "Homework/Project Party") %>
-    <br><br>
-    <%= f.submit "Check-In" %>
+    <div class="form-group">
+        <%= f.label :name %>
+        <%= f.text_field :name, :class => "form-control" %>
+    </div>
+    <div class="form-group">
+        <%= f.label :SID, "Student ID" %>
+        <%= f.text_field :SID, :class => "form-control" %>
+    </div>
+    <div class="form-group">
+        <br>
+        <h4>What are you checking in for?</h4>
+        <%= f.radio_button(:event, "lab") %>
+        <%= f.label(:event_lab, "Lab") %>
+        <br>
+        <%= f.radio_button(:event, "office_hours") %>
+        <%= f.label(:event_office_hours, "Office Hours") %>
+        <br>
+        <%= f.radio_button(:event, "guerilla_section") %>
+        <%= f.label(:event_guerilla_section, "Guerilla Section") %>
+        <br>
+        <%= f.radio_button(:event, "homework_party") %>
+        <%= f.label(:event_homework_party, "Homework/Project Party") %>
+        <br><br>
+    </div>
+    <%= f.submit "Check-In", :class => "btn btn-primary" %>
   <% end %>
 </div>
