--- a/app/views/lab_assistants/show.html.erb
+++ b/app/views/lab_assistants/show.html.erb
@@ -1,5 +1,24 @@
-<br>
-<h2 align="center"> Lab Assistant Detail View</h2>
-<p> first name: <%= @la.first_name %>
-<p> last name: <%= @la.last_name %>
-<p> email: <%= @la.email %>
+<div class="container">
+  <br>
+  <h1 align="center"> Lab Assistant Detail View</h1>
+  <br><br>
+  <table class="table table-bordered table-hover table-striped">
+    <thead>
+      <tr>
+        <th>Category</th>
+        <th>Data</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>First Name</td><td><%= @la.first_name %></td>
+      </tr>
+      <tr>
+        <td>Last Name</td><td><%= @la.last_name %></td>
+      </tr>
+      <tr>
+        <td>E-mail</td><td><%= @la.email %></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
