--- a/app/views/lab_assistants/show.html.erb
+++ b/app/views/lab_assistants/show.html.erb
@@ -17,7 +17,25 @@
         <td>Last Name</td><td><%= @la.last_name %></td>
       </tr>
       <tr>
+        <td>SID</td><td><%= @la.SID %></td>
+      </tr>
+      <tr>
         <td>E-mail</td><td><%= @la.email %></td>
+      </tr>
+      <tr>
+        <td>Validated</td><td><%= @la.validated %></td>
+      </tr>
+      <tr>
+        <td>Preferred Lab Times</td>
+        <td>
+          <% for labtime in @la.preferred_lab_times.to_a do %>
+            <% labtime = LabTime.find(labtime) %>
+            <a href=<%= lab_time_path(labtime)%>> <%= labtime.id %> </a>
+          <% end %>   
+        </td>
+      </tr>
+      <tr>
+        <td>Course</td><td><%= Course.find(@la.course_id).name %></td>
       </tr>
     </tbody>
   </table>
