--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -68,7 +68,7 @@
 				First name: <%= f.text_field :first_name, required: "" %><br />
 				Last name : <%= f.text_field :last_name, required: "" %><br />
 				Email : <%= f.email_field :email, required: "" %><br />
-				Class: <%= f.select :course_id, options_for_select(%w[CS61A CS61B CS61C]) %> <br />
+				Class: <%= f.select :course_id, options_for_select(%w[CS10 CS61A CS61B CS61C]) %> <br />
 				<%= f.submit %>
 			<% end %>
   		</div>
@@ -81,7 +81,7 @@
 			Last name : <%= f.text_field :last_name, required: "" %><br />
 			Email : <%= f.email_field :email, required: "" %><br />
 			SID : <%= f.text_field :SID, required: "" %><br />
-			Class: <%= f.select :course_id, options_for_select(%w[CS61A CS61B CS61C]) %> <br />
+			Class: <%= f.select :course_id, options_for_select(%w[CS10 CS61A CS61B CS61C]) %> <br />
 			<%= f.submit %>
 		  <% end %>
 	    </div>
