--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,9 @@
 @charset "utf-8";
 
+@import "bourbon";
+@import "neat";
 @import "vendor/toastr";
+@import "vendor/bullets";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
