--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -4,5 +4,32 @@
 
 .home-banner {
   font-size: 4em;
-  margin-top: 1em;
+  font-weight: bold;
+  color: white;
+  background: url('/assets/homepage_hero.jpg');
+  width: 100%;
+  height: 450px;
+  background-position: 0px -150px;
+  background-size: cover;
+  position: relative;
+}
+
+.home-title {
+  padding-top: 2em;
+  font-weight: bold;
+}
+
+.home-caption {
+  font-size: 20px;
+  font-weight: normal;
+}
+
+.darken {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.25);
+}
+
+.creation-caption {
+  font-size: 20px;
 }
